force-app/main/default/objects/Pricebook2/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Giving access to Price books related list on Account for Sales Reps.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Price Books</relationshipLabel>
    <relationshipName>Price_Books</relationshipName>
    <type>Lookup</type>
</CustomField>