force-app/main/default/objects/Pricebook2/fields/PricebookExternalID__c.field-meta.xml
<CustomField>
    <fullName>PricebookExternalID__c</fullName>
    <externalId>true</externalId>
    <label>PricebookExternalID</label>
    <length>35</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>