force-app/main/default/objects/Pricebook2/listViews/All_Price_Books.listView-meta.xml
<ListView>
    <fullName>All_Price_Books</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.VALIDFROM</columns>
    <columns>PRICEBOOK2.VALIDTO</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <label>All Price Books</label>
</ListView>